--- a/style.css
+++ b/style.css
@@ -10,3 +10,7 @@ License:        All rights reserved
 */
 
 @import url("../wordpress-jquerymobile/style.css");
+
+.ui-body-a, .ui-overlay-a {
+	text-shadow: 0 1px 1px #AAA;
+}
